# DL-crossvit-multibranch-segmentation

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
configs/: global.yaml  o1a.yaml  part_1.yaml
src/: crossvit_c2.py  dataset.py  part_1.py  train_o1a.py
src/models/: crossvit_c1.py  crossvit_c2.py  crossvit_general.py  crossvit_o1a.py  rollout_crossvit.py
src/utils/: metrics.py  plotting.py  seed.py
